sjsonnet/test/resources/new_test_suite/error.import_json_reversed_surrogate.jsonnet.golden
sjsonnet.ParseError: Expected "\"":1:10, found "\\uDE00\\uD8"
    at [<root>].(error.import_json_reversed_surrogate.jsonnet:1:1)
